# VanPlayer

./: .gitignore  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: IAudioPlay.cpp  IAudioPlay.h  IDecode.cpp  IDecode.h  IDemux.cpp  IDemux.h  IObserver.cpp  IObserver.h  IPlayer.cpp  IPlayer.h  IPlayerBuilder.cpp  IPlayerBuilder.h  IPlayerProxy.cpp  IPlayerProxy.h  IResample.cpp  IResample.h  IVideoView.cpp  IVideoView.h  VanAudioPlay.cpp  VanAudioPlay.h  VanDecode.cpp  VanDecode.h  VanDemux.cpp  VanDemux.h  VanPlayerBuilder.cpp  VanPlayerBuilder.h  VanResample.cpp  VanResample.h  VanVideoView.cpp  VanVideoView.h  XData.cpp  XData.h  XEGL.cpp  XEGL.h  XLog.cpp  XLog.h  XParameter.cpp  XParameter.h  XShader.cpp  XShader.h  (+5 more)
app/src/main/java/com/vansz/vanplayer/: BaseActivity.kt  MainActivity.kt  MediaActivity.kt  NativePlayer.java  VanPlayer.kt
app/src/main/java/com/vansz/vanplayer/player/: NativePlayer.java  VanPlayer.kt
app/src/main/res/layout/: activity_main.xml  activity_media.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
